--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -47,7 +47,7 @@
 \normalfont \normalsize 
 \textsc{project for CS388P: Parallel Algorithms (Fall 2016)} 
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
-\huge Prioritizing Processor Efficiency Over Time Efficiency \\ % Write your project title here
+\huge Team Write-up:\\ Prioritizing Processor Efficiency Over Time Efficiency \\ % Write your project title here
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
@@ -143,7 +143,7 @@ In solving strongly connected components, Spencer again utilizes pbfs. The algor
 
 \textit{Definition.} A frontier $F(v)$ is \textit{small} iff $|F(v)|\le\rho$.\\ 
 
-In solving Single Source Shortest Paths, Spencer employs a method very similar to pbfs, but adds additional complexity in order to account for the edge weights. The primary modifications involve modifying the nearby list invariants to be more general by increasing the range of edge weights checked before a nearby list is guaranteed to be full, introducing the idea of small nearby and frontier lists, and utilizing a safe radius whose value is determined by both the radius and estimated distance rather than simply doubling the radius each iteration. In order to manage these safe radii effectively, Spencer draws upon \textit{Paul's\cite{P83}} description of efficient operations for 2-3 trees that take $O(logn+logk)$ time, where k is the number of elements to be inserted, deleted, searched for, etc. In addition, since the longest path can now be affected by edge weights, this modification of pbfs can no longer rely upon the longest possible path being bound by $m$ and takes on a factor of L, the length of the longest edge, into multiple steps of the algorithm which ultimately impact the span and work. With these modifications, SSSP runs in  $O(\frac{n}{\rho}\log{n}\log{(L\rho)})$ time and $O(n\rho^2(\log{n} + \log{(L\rho)}\log{\rho}) + m(\log{n} + \log{(L\rho)}))$ when $\log{(L\rho)} <= \rho <= n$.
+In solving Single Source Shortest Paths, Spencer employs a method very similar to pbfs, but adds additional complexity in order to account for the edge weights. The primary modifications involve modifying the nearby list invariants to be more general by increasing the range of edge weights checked before a nearby list is guaranteed to be full, introducing the idea of small nearby and frontier lists, and utilizing a safe radius whose value is determined by both the radius and estimated distance rather than simply doubling the radius each iteration. In order to manage these safe radii effectively, Spencer draws upon \textit{Paul's\cite{P83}} description of efficient operations for 2-3 trees that take $O(logn+logk)$ time, where k is the number of elements to be inserted, deleted, searched for, etc. In addition, since the longest path can now be affected by edge weights, this modification of pbfs can no longer rely upon the longest possible path being bound by $m$ and takes on a factor of L, the length of the longest edge, into multiple steps of the algorithm which ultimately impact the span and work. With these modifications, SSSP runs in  $O(\frac{n}{\rho}\log{n}\log{(L\rho)})$ time and $O(n\rho^2(\log{n} + \log{(L\rho)}\log{\rho}) + m(\log{n} + \log{(L\rho)}))$ work when $\log{(L\rho)} <= \rho <= n$.
 
 %----------------------------------------------------------------------------------------
 %	LITERATURE SURVEY
