outline of presentation topics

--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -183,7 +183,25 @@ Walter Xia will first present \textit{Rtopo} from \textit{Spencer\cite{S97}} and
 
 \textit{Theorem 4.3:} The algorithm \textit{pbfs} computes the distance from $s$ to every other vertex in $O(\frac{n}{\rho}\log^2{\rho})$ time and does $O(m\log{p} + n\rho^2\log^2{\rho})$ work.\\
 
-If time permits, Walter Xia will also present \textit{pbfs} from \textit{Spencer\cite{S97}} and establish \textit{Theorem 3.4}. To this end, we will present \textit{Lemma 4.1} and \textit{4.2}. This algorithm is not as critical since it's techniques are very similar to that of \textit{Rtopo}.
+If time permits, Walter Xia will also present \textit{pbfs} from \textit{Spencer\cite{S97}} and establish \textit{Theorem 3.4}. To this end, we will present \textit{Lemma 4.1} and \textit{4.2}. This algorithm is not as critical since it's techniques are very similar to that of \textit{Rtopo}.\\
+
+10 : Definition 3.2.4. The rank of a vertex v is log2(r(v)).\\
+
+Matthew Hudson will first give a high level presentation on \textit{Spencer's\cite{S97}} algorithm for finding Strongly Connected Components in order and how he utilizes \textit{Ullman's\cite{UY91}} Las Vegas Verifier in order to guarantee a correct solution.\\
+
+Lemma 6.1.1\\
+
+Lemma 6.1.2\\
+
+Lemma 6.1.3\\
+
+Lemma 6.2.1\\
+
+Lemma 6.2.2\\
+
+Theorem 6.3.1\\
+
+Afterwards, Matthew Hudson will present \textit{Spencer's\cite{S97}} algorithm for Single Source Shortest Paths and establish Theorem 6.3.1. In order to do so, we will present Lemmas 6.1.1-6.1.3 as well as Lemma 6.2.2. If time permits, we will also discuss \textit{Spencer's\cite{S97}} method for finding eligible vertices, however, the methods involved already appeared in Rtopo and pbfs in more basic forms, so this section is not critical for the presentation.
 
 %----------------------------------------------------------------------------------------
 %	FURTHER RESEARCH
